Adjusted layout of bus times, allowed collapse of stop data

--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ h2 {
 	background-color: #FFFFFF;
 	color: #3e3e3e;
 	padding: 1%;
-	margin-top: 2%;
+	margin: 2% -2% -2%;
 	font-size: 0.8em;
 }
 
